app/assets/stylesheets/elements/projects-show.scss
// Place all the styles related to the projects controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

$loophole_shadow_color: rgba(66,66,66,0.25);

#project {

  @include bp($b_8_and_up) {
    height: calc( 100vh - #{ $d_header_margin_top + $d_header_height + 3*$d_gridheight } ) !important; // overwrite calc-enabled browsers
  }

  .project__title {
    font-weight: bold;
  }

  .slide {
    padding-left: 1 * $d_gutterwidth_abs;
    padding-right: 1 * $d_gutterwidth_abs;
  }

  .slick-slider {
    button {
      display: none !important;
    }
  }

  .slides, .slide {
    @include bp($b_8_and_lower) { height: auto; } // todo crop to fit horizontal grid
    @include bp($b_8-12)        { height: 96 * $d_gridheight; }
    @include bp($b_12-16)       { height: 96 * $d_gridheight; }
    @include bp($b_16-20)       { height: 96 * $d_gridheight; }
    @include bp($b_20-24)       { height: 96 * $d_gridheight; }
    @include bp($b_24_and_up)   { height: 134 * $d_gridheight; }

    @include bp($b_8_and_up) {
      height: calc( 100vh - #{ $d_header_margin_top + $d_header_height + 5*$d_gridheight + $d_project_info_header_height } ) !important; // overwrite calc-enabled browsers
    }

    overflow:hidden;
  }

  .slides {
    margin-bottom: 4 * $d_gridheight;

    &.loophole-transition {
      .slide__image{
        transform: scaleX(0);
        opacity:0.1;
      }
      .slide__loopholes {
        opacity:0;
      }      
    }    

    .slide__image, .slide__loopholes {
      transition: transform 0.2s, opacity 0.2s;
    }

  }

  .pan_container {
    outline: none;
  }

  .slide {

    position:relative;

    outline: none;    

    .slide__image {
      height:inherit;
      img {
        display: block;
        width:100%;
        height:inherit;

        object-fit: contain;
        object-position: center;
        @include visual_bg;
      }
    }

    &.plan .slide__image img {
      filter: brightness(95%);
    }

    &.zoomable .slide__image img {
      position: absolute;
      padding-left: 1 * $d_gutterwidth_abs;
      padding-right: 1 * $d_gutterwidth_abs;      
      left:0;
      top:0;
      width: calc(100% - #{2 * $d_gutterwidth_abs});
      background: transparent;
    }

    .slide__loopholes {
      position: absolute;
      top:0;
      left:0;
      height:inherit;
      width: 100%;

      @include bp($b_8_and_lower) { display: none; }

      @include visual_bg;
    }

    .slide__loophole {
      position:absolute;
      top:0;
      left:0;

      height:$d_loophole_outer_radius;
      width:$d_loophole_outer_radius;

      transform: translateX(-50%) translateY(-50%) scale(1); // center it on the coordinates. scale may get modified by js
      transform-origin: center;

      border: solid $d_loophole_radius_width $ca_loophole_line;
      border-radius: 50%;

      box-shadow: 0px 0px #{$d_loophole_outer_radius - $d_loophole_inner_radius} 0px $loophole_shadow_color, inset 0px 0px #{$d_loophole_outer_radius - $d_loophole_inner_radius} 0px $loophole_shadow_color;

      a {
        border: solid $d_loophole_radius_width $ca_loophole_line;
        border-radius: 50%;
        padding-left: $d_caption_loophole_radius_width;
        width:$d_loophole_inner_radius - $d_caption_loophole_radius_width;
        height:$d_loophole_inner_radius;
        display: block;
        text-align: center;
        position:relative;
        left: ($d_loophole_outer_radius - $d_loophole_inner_radius)/2 - $d_loophole_radius_width;
        top: ($d_loophole_outer_radius - $d_loophole_inner_radius)/2 - $d_loophole_radius_width;

        cursor:pointer;
        
        color: $ca_loophole_line;
        line-height: calc( 1rem - #{$d_caption_loophole_radius_width} );
        font-weight:bold;
        
        outline: none;

        box-shadow: 0px 0px $d_loophole_inner_radius 0px $loophole_shadow_color, inset 0px 0px $d_loophole_inner_radius 0px $loophole_shadow_color;
        text-shadow: 0px 0px $d_loophole_inner_radius black;

        transition: background-color 0.3s;

        &:hover {
          background-color: $ca_loophole_inverted;
        }
        
        span {
          position: relative;
          top: ($d_loophole_inner_radius - $base-font-size - $d_loophole_radius_width)/2;
        }
      }

      //@include prefixer('background-image', "radial-gradient(30px 30px 45deg, circle cover, yellow 0%, orange 100%, red 95%)", webkit moz spec);

      //height:inherit;
      //width:100%;
    }
  }

  .slide__caption {
    
    .slide__caption__order {
      line-height: $d_caption_loophole_radius;
      display: inline-block;
      height: $d_caption_loophole_radius;
      text-align: center;
      margin-left: 0.75em; // default word spacing is 0.25em
    }

    .slide & {
      display: none; // only outside of slide
    }

    @include visual_bg;
  }
}

#project {

  > .project__title {

    @include bp($b_8_and_up) { 
      display:none;
    }

    margin-right: $d_gutterwidth_abs;
    margin-left: $d_gutterwidth_abs;
    margin-bottom: 3 * $d_gridheight;

  }

  .project__info {

    @include bp($b_8_and_up) { 
      height: $d_project_info_header_height;
      padding-top: $d_project_info_header_margin_top;
      position: absolute;
      bottom: 0;
    }
    margin-bottom: 1 * $d_gridheight;

    position:relative;
    z-index: 15;

    width:100%;

    .project__info__content {

      @include bp($b_8_and_up) {
        position: absolute;
        bottom:0;
        padding-top: inherit;
      }
      
      background-color: white;
      
      @include visual_bg;

      @include bp($b_8_and_up) {
        width: calc( 100% - #{ 2*$d_gutterwidth_abs + 1 * $d_gridwidth_abs } );
        padding-left: $d_gutterwidth_abs + 0.5 * $d_gridwidth_abs;
        padding-right: $d_gutterwidth_abs+ 0.5 * $d_gridwidth_abs;
      }

      @include bp($b_20_and_up) {
        width: calc( 100% - #{ 6*$d_gutterwidth_abs + 4*$d_gridwidth_abs } );
        padding-left: 3 * $d_gutterwidth_abs + 2 * $d_gridwidth_abs;
        padding-right: 3 * $d_gutterwidth_abs+ 2 * $d_gridwidth_abs;
      }

      transition: padding-bottom 0.2s;

      .project__title, .project__title__controls {
        @include visual_bg;
      }

      .project__headline {

        @include bp($b_8_and_lower) { 
          display:none;
        }

        overflow: hidden;
        padding-bottom: 3 * $d_gridheight;
        top: 1 * $d_gridheight;
        position: relative;

        > * > * {
          display: block;
          @include bp($b_8_and_up) { 
            height: 5 * $d_gridheight;
            line-height: 5 * $d_gridheight;
            // height: $d_project_info_header_height;
            // line-height: $d_project_info_header_height;
            margin:0;
          }
        }

        .project__headline_1, .project__headline_2 {
          display:flex;
          float:left;
          width:50%;
          box-sizing: border-box;
        }

        .project__headline_1 {
          padding-right: 0.5 * $d_gutterwidth_abs;
          cursor: pointer;
          
          @include bp($b_8_and_lower) { width: 100%; }
        }

        .project__headline_2 {
          padding-left: 0.5 * $d_gutterwidth_abs;
          justify-content: flex-end;

          @include bp($b_8_and_lower) { display: none; }
        }

        @include bp($b_8_and_up) { 
          .project__title__controls, .slide__caption__position {
            white-space: nowrap;
          }

          .project__title {
            @include ellipsis;
          }

          .slide__caption__text {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
          }
        }
      }

      .project__description {
        clear: both;
        overflow: hidden;
        transition: height 0.2s;
        transition-timing-function: ease-in-out;
        margin-bottom: 5 * $d_gridheight;

        @include visual_bg;
      }

    }  

    &.open {
      .project__description {
        //max-height: 96 * $d_gridheight;
        //padding-bottom: 4 * $d_gridheight;
      }
      .project__title__controls {
        padding-left: 1em;
        color: #aaa;
      }
      .project__info__content {
        padding-bottom: $base-line-height;
      }
    }

    &:not(.open) {
      .project__title__controls {
        display: none;
      }
      .project__description {
        @include bp($b_8_and_up) {
          height:0 !important;
        }
      }
    }


  }

  @include bp($b_8_and_lower) {
    .slides{
      margin-bottom: 0;
      cursor: default !important;
    }
    .slide {
      margin-bottom: 3 * $d_gridheight;
      .slide__caption__position {
        display: none;
      }
      .slide__caption {
        margin-top: 2 * $d_gridheight;
      }
    }
  }


}

#project {

  .slide_container {
    position: relative;
  }

  .zoomable_control {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100px;
    z-index: 12;
    margin-left: $d_gutterwidth_abs;
    bottom: 2 * $d_gridheight;
    opacity:1;

    @include bp($b_8_and_lower) { display: none; }
  }

  .slides:not(.zoomable) ~ .zoomable_control {
    opacity:0;
    pointer-events: none;
  }

  .slides.zoomable ~ .zoomable_control {
    transition: opacity 0.2s;
  }

  .project__tags {
    position: absolute;
    text-align: center;
    width: 100%;
    z-index:10;
    margin-top: 3 * $d_gridheight;
    pointer-events: none;

    @include bp($b_8_and_lower) { display: none; }
  }

  .project__topics {
    position: absolute;
    text-align: center;
    width: 100%;
    z-index:10;
    bottom: 2 * $d_gridheight;
    pointer-events: none;

    @include bp($b_8_and_lower) { display: none; }
  }

  $d_project_topic_dot_radius: 26px;
  $d_project_topic_triangle_size: 8px;

  .project__topics {
    .topic {
      background-color:grey; color:grey; // adjust both to set color
      width: $d_project_topic_dot_radius;
      height: $d_project_topic_dot_radius;
      border-radius: 50%;
      display: inline-block;
      font-size:10px;
      font-weight: bold;
      &:not(:last-child) {
        margin-right: 0.3 * $d_gutterwidth_abs;
      }  
      pointer-events: all;
      cursor:pointer;
    }

    .topic.active a {
      display:inline-block;
    }

    .topic:not(.active) a {
      display:none;
    }

    .topic a {

       // speech bubble style body
        color: white;
        content: attr(data-title);
        position: absolute;
        top: -$d_project_topic_triangle_size - $d_gridheight - 3 * $d_gridheight;
        text-align: center;
        transform: translateX(-50%);
        background-color: inherit;
        padding-left: 0.6em;
        padding-right: 0.6em;
        height: 3 * $d_gridheight;  
      

      &:after { // speech bubbly style triangle
        content: "";
        position: absolute;
        bottom: -$d_project_topic_triangle_size ;
        border-width: $d_project_topic_triangle_size $d_project_topic_triangle_size 0;
        border-style: solid;
        border-color: inherit;
        display: inline-block;
        width: 0;
        left:50%;
        transform: translateX(-50%);
      }

    }
  }
}

